<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory
        android:key="cat_search"
        android:title="@string/cat_search" >
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="search_hoersaal"
            android:summary="@string/search_hoersaal"
            android:title="@string/button_hoersaal" >
        </CheckBoxPreference>
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="search_seminar"
            android:summary="@string/search_seminar"
            android:title="@string/button_seminar" >
        </CheckBoxPreference>
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="search_labore"
            android:summary="@string/search_labore"
            android:title="@string/button_labor" >
        </CheckBoxPreference>
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="search_zeichen"
            android:summary="@string/search_zeichen"
            android:title="@string/button_zeichen" >
        </CheckBoxPreference>
    </PreferenceCategory>
    <PreferenceCategory
        android:key="cat_usage"
        android:title="@string/cat_usage" >
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="mark_time"
            android:summary="@string/mark_time_desc"
            android:title="@string/mark_time" >
        </CheckBoxPreference>
    </PreferenceCategory>
    <PreferenceCategory
        android:key="cat_location"
        android:title="@string/cat_location" >
        <CheckBoxPreference
            android:key="map_instead_route"
            android:summary="@string/map_instead_of_route_desc"
            android:title="@string/map_instead_of_route" >
        </CheckBoxPreference>
    </PreferenceCategory>
    <PreferenceCategory
        android:key="cat_data"
        android:title="@string/cat_data" >
        <Preference
            android:key="update_data"
            android:summary="@string/update_data_desc"
            android:title="@string/update_data" >
        </Preference>

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="update_reminder"
            android:summary="@string/update_remind_desc"
            android:title="@string/update_remind" >
        </CheckBoxPreference>

        <Preference
            android:key="reset_db"
            android:summary="@string/reset_database_desc"
            android:title="@string/reset_database" >
        </Preference>
    </PreferenceCategory>
    <PreferenceCategory
        android:key="cat_about"
        android:title="@string/cat_info" >
        <Preference
            android:key="about"
            android:title="@string/about" >
        </Preference>
    </PreferenceCategory>

</PreferenceScreen>